# xdm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_zh.md
.github/workflows/: check.yaml  clippy.yaml  publish.yaml  release.yaml
src/: main.rs
test/: s  xdm  xdm.yaml
