[package]
name = "xdm"
version = "0.4.1"
edition = "2021"
description = "XXiaoA's dotfiles manager"
repository = "https://github.com/XXiaoA/xdm/"
homepage = "https://crates.io/crates/xdm"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
clap = { version = "3.2.17", features = ["derive"] }
colored = "2.0.0"
path-absolutize = "3.0.13"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.10"

[profile.release]
panic = 'abort'
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
